--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -9,12 +9,13 @@
     "skipLibCheck": true,
 
     /* Bundler mode */
-    // "moduleResolution": "bundler",
-    // "allowImportingTsExtensions": true,
-    // "isolatedModules": true,
-    // "moduleDetection": "force",
-    // "noEmit": true,
-    // "jsx": "react-jsx",
+    "moduleResolution": "bundler",
+    "allowImportingTsExtensions": true,
+    "isolatedModules": true,
+    "moduleDetection": "force",
+    "noEmit": false,
+    "emitDeclarationOnly": true,
+    "jsx": "react-jsx",
 
     /* Linting */
     "strict": true,
