--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -8,11 +8,11 @@
     "skipLibCheck": true,
 
     /* Bundler mode */
-    // "moduleResolution": "bundler",
-    // "allowImportingTsExtensions": true,
-    // "isolatedModules": true,
-    // "moduleDetection": "force",
-    // "noEmit": true,
+    "moduleResolution": "bundler",
+    "allowImportingTsExtensions": true,
+    "isolatedModules": true,
+    "moduleDetection": "force",
+    "noEmit": false,
 
     /* Linting */
     "strict": true,
